release/rag/templates/deployment-backend-indexing.yaml
---
# Source: rag/templates/deployment-backend-indexing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haystack-rag-backend-indexing
  labels:
    app.kubernetes.io/component: indexing
    app.kubernetes.io/group: backend
    app: haystack-rag
    helm.sh/chart: rag-0.1.0
    app.kubernetes.io/name: rag
    app.kubernetes.io/instance: haystack
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haystack-rag
      app.kubernetes.io/component: indexing
      app.kubernetes.io/group: backend
      app.kubernetes.io/name: rag
      app.kubernetes.io/instance: haystack
  template:
    metadata:
      labels:
        app: haystack-rag
        app.kubernetes.io/component: indexing
        app.kubernetes.io/group: backend
        app.kubernetes.io/name: rag
        app.kubernetes.io/instance: haystack
    spec:
      containers:
      - env:
        - name: OPENSEARCH_USER
          valueFrom:
            secretKeyRef:
              key: opensearch-user
              name: haystack-rag-secrets
        - name: OPENSEARCH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: opensearch-password
              name: haystack-rag-secrets
        - name: OPENAI_API_KEY
          valueFrom:
            secretKeyRef:
              key: openai-api-key
              name: haystack-rag-secrets
        - name: KUBERNETES_CLUSTER_DOMAIN
          value: "cluster.local"
        image: backend-indexing:local
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 18
          httpGet:
            path: /health
            port: indexing-api
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
        name: indexing
        ports:
        - containerPort: 8001
          name: indexing-api
        readinessProbe:
          failureThreshold: 18
          httpGet:
            path: /health
            port: indexing-api
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 20Gi
            memory: 2Gi
          requests:
            cpu: 250m
            ephemeral-storage: 10Gi
            memory: 1Gi
        volumeMounts:
        - mountPath: /app/files
          name: file-storage
      volumes:
      - name: file-storage
        persistentVolumeClaim:
          claimName: haystack-rag-file-storage
