release/rag/templates/statefulset-opensearch.yaml
---
# Source: rag/templates/statefulset-opensearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: haystack-rag-opensearch
  labels:
    app.kubernetes.io/component: opensearch
    app.kubernetes.io/group: search
    app.kubernetes.io/instance: haystack
    app: haystack-rag
    helm.sh/chart: rag-0.1.0
    app.kubernetes.io/name: rag
    app.kubernetes.io/instance: haystack
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app: haystack-rag
    app.kubernetes.io/component: opensearch
    app.kubernetes.io/group: search
  ports:
  - name: rest-api
    port: 9200
    targetPort: 9200
  - name: performance
    port: 9600
    targetPort: 9600
---
# Source: rag/templates/statefulset-opensearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: haystack-rag-search-opensearch
  labels:
    app.kubernetes.io/component: opensearch
    app.kubernetes.io/group: search
    app: haystack-rag
    helm.sh/chart: rag-0.1.0
    app.kubernetes.io/name: rag
    app.kubernetes.io/instance: haystack
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haystack-rag
      app.kubernetes.io/component: opensearch
      app.kubernetes.io/group: search
  serviceName: haystack-rag-opensearch
  template:
    metadata:
      labels:
        app: haystack-rag
        app.kubernetes.io/component: opensearch
        app.kubernetes.io/group: search
    spec:
      containers:
      - env:
        - name: discovery.type
          value: "single-node"
        - name: bootstrap.memory_lock
          value: "false"
        - name: OPENSEARCH_JAVA_OPTS
          value: "-Xms512m -Xmx512m"
        - name: OPENSEARCH_SECURITY_ENABLED
          value: "true"
        - name: OPENSEARCH_INITIAL_ADMIN_USER
          valueFrom:
            secretKeyRef:
              key: opensearch-user
              name: haystack-rag-secrets
        - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: opensearch-password
              name: haystack-rag-secrets
        - name: KUBERNETES_CLUSTER_DOMAIN
          value: "cluster.local"
        image: opensearchproject/opensearch:2.11.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 180
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 5
        name: opensearch
        ports:
        - containerPort: 9200
          name: rest-api
        - containerPort: 9600
          name: performance
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 90
          periodSeconds: 10
          tcpSocket:
            port: 9200
          timeoutSeconds: 10
        resources:
          limits:
            cpu: "1"
            ephemeral-storage: 4Gi
            memory: 4Gi
          requests:
            cpu: 500m
            ephemeral-storage: 2Gi
            memory: 2Gi
        volumeMounts:
        - mountPath: /usr/share/opensearch/data
          name: opensearch-data
  updateStrategy: {}
  volumeClaimTemplates:
  - metadata:
      creationTimestamp: null
      name: opensearch-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources: 
        requests:
          storage: 30Gi
      storageClassName: "local-path"
