release/rag/templates/ingress-backend.yaml
---
# Source: rag/templates/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haystack-rag-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rag.local
      secretName: rag-local-tls
  rules:
    - host: rag.local
      http:
        paths:
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: haystack-rag-query
                port:
                  number: 8002
          - path: /api/files
            pathType: Prefix
            backend:
              service:
                name: haystack-rag-indexing
                port:
                  number: 8001
